# jupyter-groq-provider

./: .gitignore  LICENSE  README.md  README.old  Untitled.ipynb  jupyter-custom-providers.md  pyproject.toml
src/jupyter_groq_provider/: __init__.py  groq_provider.py
